force-app/main/default/objects/Customer_Demographic__c/Customer_Demographic__c.object-meta.xml
<CustomObject>
    <label>Customer Demographic</label>
    <nameField>
        <label>Customer Demographic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>