force-app/main/default/objects/Customer_Demographic__c/fields/Death_beneift__c.field-meta.xml
<CustomField>
    <fullName>Death_beneift__c</fullName>
    <label>Death beneift</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>