force-app/main/default/objects/Customer_Demographic__c/fields/Employment_Details__c.field-meta.xml
<CustomField>
    <fullName>Employment_Details__c</fullName>
    <label>Employment Details</label>
    <type>TextArea</type>
</CustomField>