force-app/main/default/objects/Customer_Demographic__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <label>First name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>