force-app/main/default/objects/Customer_Demographic__c/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <label>Insurance Provider</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>