force-app/main/default/objects/Customer_Demographic__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>