force-app/main/default/objects/Customer_Demographic__c/fields/No_of_depd_with_R_n_details__c.field-meta.xml
<CustomField>
    <fullName>No_of_depd_with_R_n_details__c</fullName>
    <inlineHelpText>No of dependents with Relationship details.</inlineHelpText>
    <label>No of depd with R/n details</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>