force-app/main/default/objects/Customer_Demographic__c/fields/No_of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>No_of_Dependents__c</fullName>
    <label>No of Dependents</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>