force-app/main/default/objects/Customer_Demographic__c/fields/No_of_years_in_employment__c.field-meta.xml
<CustomField>
    <fullName>No_of_years_in_employment__c</fullName>
    <inlineHelpText>No of years in current employment.</inlineHelpText>
    <label>No of years in employment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>