force-app/main/default/objects/Customer_Demographic__c/fields/Occupation_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Type__c</fullName>
    <label>Occupation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profession</fullName>
            </value>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>