force-app/main/default/objects/Customer_Demographic__c/fields/Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Office_Number__c</fullName>
    <label>Office Number</label>
    <type>Phone</type>
</CustomField>