force-app/main/default/objects/Customer_Demographic__c/fields/PAN_SSN_National_identity__c.field-meta.xml
<CustomField>
    <fullName>PAN_SSN_National_identity__c</fullName>
    <label>PAN / SSN / National identity</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>