force-app/main/default/objects/Customer_Demographic__c/fields/Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address__c</fullName>
    <label>Permanent Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>