force-app/main/default/objects/Customer_Demographic__c/fields/Policy_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expiry_Date__c</fullName>
    <label>Policy Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>