force-app/main/default/objects/Customer_Demographic__c/fields/Policy_start_date__c.field-meta.xml
<CustomField>
    <fullName>Policy_start_date__c</fullName>
    <label>Policy start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>