force-app/main/default/objects/Customer_Demographic__c/fields/Policy_type_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Policy_type_Preferred__c</fullName>
    <label>Policy type Preferred</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Auto Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>