force-app/main/default/objects/Customer_Demographic__c/fields/Premium_range_per_annum__c.field-meta.xml
<CustomField>
    <fullName>Premium_range_per_annum__c</fullName>
    <label>Premium range per annum</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;=10000</fullName>
            </value>
            <value>
                <fullName>10001-20000</fullName>
            </value>
            <value>
                <fullName>20001-30000</fullName>
            </value>
            <value>
                <fullName>30001-40000</fullName>
            </value>
            <value>
                <fullName>40001-50000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>