force-app/main/default/objects/Customer_Demographic__c/fields/previous_address__c.field-meta.xml
<CustomField>
    <fullName>previous_address__c</fullName>
    <inlineHelpText>if &lt;=1year for Q#7 please enter , furnish Previous address.</inlineHelpText>
    <label>previous address</label>
    <type>TextArea</type>
</CustomField>