force-app/main/default/objects/Customer_Demographic__c/fields/Product_category_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Product_category_Requirement__c</fullName>
    <label>Product category Requirement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>