force-app/main/default/objects/Customer_Demographic__c/fields/Product_type_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Product_type_Requirement__c</fullName>
    <label>Product type Requirement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child plan</fullName>
            </value>
            <value>
                <fullName>Endowment type</fullName>
            </value>
            <value>
                <fullName>Term Life</fullName>
            </value>
            <value>
                <fullName>Money Back</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>