force-app/main/default/objects/Customer_Demographic__c/fields/Purpose_of_Investment__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Investment__c</fullName>
    <label>Purpose of Investment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security &amp; Assurance</fullName>
                <default>true</default>
                <label>Security &amp; Assurance</label>
            </value>
            <value>
                <fullName>Tax Savings</fullName>
            </value>
            <value>
                <fullName>Retirement plan</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>