force-app/main/default/objects/Customer_Demographic__c/fields/Recidence__c.field-meta.xml
<CustomField>
    <fullName>Recidence__c</fullName>
    <label>Recidence</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>