force-app/main/default/objects/Customer_Demographic__c/fields/Residence_Address__c.field-meta.xml
<CustomField>
    <fullName>Residence_Address__c</fullName>
    <label>Residence Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>