force-app/main/default/objects/Customer_Demographic__c/fields/Residence_Number__c.field-meta.xml
<CustomField>
    <fullName>Residence_Number__c</fullName>
    <label>Residence Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>