force-app/main/default/objects/Customer_Demographic__c/fields/Saleried_on_Profession__c.field-meta.xml
<CustomField>
    <fullName>Saleried_on_Profession__c</fullName>
    <label>Saleried on Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>