force-app/main/default/objects/Customer_Demographic__c/fields/Self_employment__c.field-meta.xml
<CustomField>
    <fullName>Self_employment__c</fullName>
    <inlineHelpText>If self Employment details on the business.</inlineHelpText>
    <label>Self employment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>