force-app/main/default/objects/Customer_Demographic__c/fields/Sum_Assured__c.field-meta.xml
<CustomField>
    <fullName>Sum_Assured__c</fullName>
    <label>Sum Assured</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>