force-app/main/default/objects/Customer_Demographic__c/fields/Surrender_Value__c.field-meta.xml
<CustomField>
    <fullName>Surrender_Value__c</fullName>
    <label>Surrender Value</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>