force-app/main/default/objects/Customer_Demographic__c/fields/Temporary_Address__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Address__c</fullName>
    <label>Temporary Address</label>
    <type>TextArea</type>
</CustomField>