force-app/main/default/objects/Customer_Demographic__c/fields/Total_policy_Amount_Preffered__c.field-meta.xml
<CustomField>
    <fullName>Total_policy_Amount_Preffered__c</fullName>
    <label>Total policy Amount Preffered</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>