force-app/main/default/objects/Customer_Demographic__c/fields/Type_of_Policy__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Policy__c</fullName>
    <label>Type of Policy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whole life</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Money Back</fullName>
            </value>
            <value>
                <fullName>Unit Linked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>