force-app/main/default/objects/Customer_Demographic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_name__c</columns>
    <columns>Last_name__c</columns>
    <columns>Gender__c</columns>
    <columns>Designation__c</columns>
    <columns>Nationality__c</columns>
    <columns>Occupation_Type__c</columns>
    <columns>Recidence__c</columns>
    <columns>Type_of_Policy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>